# yew-chat

./: Cargo.toml  README.md  index.html  request_app.html  styles-775c84d1310feb8a.css  styles-e97eff3b424a0ace.css  styles-f307c9f07b41d564.css  styles.css  yew_chat.puml  yew_chat_app-1a580e9d9f4a120e.js  yew_chat_app-1a580e9d9f4a120e_bg.wasm  yew_chat_app-1cfb98312004b2ba.js  yew_chat_app-1cfb98312004b2ba_bg.wasm  yew_chat_app-3d62375eb61e1afc.js  yew_chat_app-3d62375eb61e1afc_bg.wasm  yew_chat_app-43d98536c84d08fd.js  yew_chat_app-43d98536c84d08fd_bg.wasm  yew_chat_app-46483e8df4735be.js  yew_chat_app-46483e8df4735be_bg.wasm  yew_chat_app-486f896446db9b48.js  yew_chat_app-486f896446db9b48_bg.wasm  yew_chat_app-5d1c4a3c843e2b57.js  yew_chat_app-5d1c4a3c843e2b57_bg.wasm  yew_chat_app-758217778c627ad9_bg.wasm  yew_chat_app-856d34d69d64f57d.js  yew_chat_app-856d34d69d64f57d_bg.wasm  yew_chat_app-9d3dc6b022fabcef.js  yew_chat_app-9d3dc6b022fabcef_bg.wasm  yew_chat_app-a13bd7dbb72d135e.js  yew_chat_app-b0db2bdfdcdda5f4.js  yew_chat_app-b0db2bdfdcdda5f4_bg.wasm  yew_chat_app-b5c88d8176c3df43_bg.wasm  yew_chat_app-eb7970175cda90d0.js  yew_chat_app-eb7970175cda90d0_bg.wasm  yew_chat_app-eda6dd0afba59a2c.js  yew_chat_app-eda6dd0afba59a2c_bg.wasm  yew_chat_app-f6a4b910995bebeb.js  yew_chat_app-f6a4b910995bebeb_bg.wasm  yew_chat_app-f74b08055a87c5bb.js  yew_chat_app-f74b08055a87c5bb_bg.wasm
.github/workflows/: gh-pages.yml
examples/: request_app.rs
src/: app.rs  lib.rs
src/api/: mod.rs  receive_response.rs  send_request.rs
src/components/: chat_app.rs  chat_comp.rs  input.rs  message_comp.rs  message_input_comp.rs  mod.rs
src/handler/: message_handler.rs  mod.rs  request_message_handler.rs  simple_message_handler.rs
src/model/: chat.rs  errors.rs  message.rs  message_receiver.rs  message_sender.rs  mod.rs
src/server/: main.rs  memory_message_storage.rs  message_storage.rs  mod.rs  openapi.rs  routes.rs
