[package]
name = "yew-chat"
version = "0.1.0"
edition = "2021"
description = "A simple chat application built with Yew"

[[bin]]
name = "yew_chat_app"
path = "src/main.rs"

[lib]
name = "yew_chat"
path = "src/lib.rs"

[features]
default = ["yew"]
yew = ["dep:yew", "web-sys", "wasm-bindgen-futures", "gloo"]

[dependencies]
async-trait = "0.1.82"
chrono = "0.4"
gloo = { version = "0.11", features = ["timers"], optional = true }
log = "0.4"
yew = { version = "0.21", features = ["csr"], optional = true }
web-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
